[gd_scene load_steps=19 format=3 uid="uid://bo2fcaed2jk31"]

[ext_resource type="Theme" uid="uid://3o2l8b5bj0uv" path="res://Resources/MenuTheme.tres" id="1_o8mxa"]
[ext_resource type="Script" path="res://Scripts/OptionsMenu.gd" id="1_syltm"]
[ext_resource type="PackedScene" uid="uid://dvkhlvy7ssp4k" path="res://Game Assets/Deco/Tisch.tscn" id="3_47wyk"]
[ext_resource type="PackedScene" uid="uid://bm7y83q57jaqj" path="res://Game Assets/Walls n Stuff/Neues Zeug/FloorTile.tscn" id="3_l3m2c"]
[ext_resource type="VoxelGIData" uid="uid://c0peh5sctd5qb" path="res://Resources/PreviewVoxelGI.res" id="3_t3o2y"]
[ext_resource type="PackedScene" uid="uid://dkj4hwgcmkmnk" path="res://Game Assets/Walls n Stuff/Fenster2_3.tscn" id="4_ldhjw"]
[ext_resource type="PackedScene" uid="uid://bhwtbibiiurqu" path="res://Game Assets/Walls n Stuff/wand_mit_leiste_1_3.tscn" id="5_paph5"]
[ext_resource type="PackedScene" uid="uid://bafa7ptmntj0y" path="res://Game Assets/Deco/Mülleimer.tscn" id="7_1nlli"]
[ext_resource type="PackedScene" uid="uid://blvxxxj44qb66" path="res://Game Assets/Deco/Uhr.tscn" id="9_fd0cf"]
[ext_resource type="PackedScene" uid="uid://bvipxvc0fsh1l" path="res://Game Assets/Deco/Buch.tscn" id="10_ahesl"]
[ext_resource type="PackedScene" uid="uid://dpev1isewbhei" path="res://Game Assets/Deco/Bilderrahmen.tscn" id="11_p1m7o"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_i8gbk"]
sky_top_color = Color(0, 0, 0, 1)
sky_horizon_color = Color(0, 0.109804, 0.243137, 1)
ground_bottom_color = Color(0, 0, 0, 1)
ground_horizon_color = Color(0.0862745, 0, 0.223529, 1)
sun_angle_max = 2.79
sun_curve = 2.4

[sub_resource type="Sky" id="Sky_bc6lt"]
sky_material = SubResource("ProceduralSkyMaterial_i8gbk")

[sub_resource type="Environment" id="Environment_jhhpj"]
background_mode = 2
background_color = Color(1, 1, 1, 1)
background_energy_multiplier = 0.25
sky = SubResource("Sky_bc6lt")
ambient_light_source = 2
ambient_light_color = Color(0.380392, 0.447059, 0.698039, 1)
ambient_light_energy = 0.01
tonemap_mode = 2
ssao_enabled = true
ssao_radius = 2.0
ssao_intensity = 8.0
ssao_power = 0.337969
ssao_light_affect = 1.0
ssil_enabled = true
ssil_radius = 3.32
ssil_intensity = 0.54
sdfgi_y_scale = 0
glow_normalized = true
glow_blend_mode = 0
volumetric_fog_enabled = true
volumetric_fog_density = 0.0

[sub_resource type="FastNoiseLite" id="FastNoiseLite_fe7mb"]
frequency = 0.0662

[sub_resource type="NoiseTexture3D" id="NoiseTexture3D_mvt8o"]
noise = SubResource("FastNoiseLite_fe7mb")

[sub_resource type="FogMaterial" id="FogMaterial_xsw50"]
density = 1.1624
edge_fade = 1e-05
density_texture = SubResource("NoiseTexture3D_mvt8o")

[sub_resource type="BoxMesh" id="BoxMesh_wxttw"]

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_syltm")

[node name="PanelContainer" type="AspectRatioContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -499.0
offset_top = -377.0
offset_right = 499.0
offset_bottom = 377.0
grow_horizontal = 2
grow_vertical = 2
stretch_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="scaleLabel" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Die Qualität der VoxelGI"
mouse_filter = 1
theme = ExtResource("1_o8mxa")
theme_override_font_sizes/font_size = 32
text = "3D Skalierung"

[node name="scaleSlider" type="HSlider" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "
"
theme = ExtResource("1_o8mxa")
min_value = 0.01
max_value = 2.0
step = 0.01
value = 1.0
allow_greater = true
tick_count = 3
ticks_on_borders = true

[node name="fpsToggleButton" type="CheckButton" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_o8mxa")
theme_override_font_sizes/font_size = 32
text = "FPS anzeigen"

[node name="fullScreenToggleButton" type="CheckButton" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_o8mxa")
theme_override_font_sizes/font_size = 32
text = "Vollbild"

[node name="vsyncToggleButton" type="CheckButton" parent="PanelContainer/HBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme = ExtResource("1_o8mxa")
theme_override_font_sizes/font_size = 32
text = "VSync"

[node name="ssaoToggleButton" type="CheckButton" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_o8mxa")
theme_override_font_sizes/font_size = 32
text = "SSAO"

[node name="volFogToggleButton" type="CheckButton" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_o8mxa")
theme_override_font_sizes/font_size = 32
text = "Volumetrischer Nebel"

[node name="SSIL" type="CheckButton" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_o8mxa")
theme_override_font_sizes/font_size = 32
text = "SSIL"

[node name="MSAAToggleButton" type="CheckButton" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_o8mxa")
theme_override_font_sizes/font_size = 32
text = "MSAA"

[node name="fpsLabel" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Die Qualität der VoxelGI"
mouse_filter = 1
theme = ExtResource("1_o8mxa")
theme_override_font_sizes/font_size = 32
text = "FPSLABEL"

[node name="fpsSlider" type="HSlider" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "
"
theme = ExtResource("1_o8mxa")
min_value = 1.0
max_value = 5.0
value = 1.0
tick_count = 5
ticks_on_borders = true

[node name="brightnessLabel" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Die Qualität der VoxelGI"
mouse_filter = 1
theme = ExtResource("1_o8mxa")
theme_override_font_sizes/font_size = 32
text = "BRIGHTNESSLABEL"

[node name="brightnessSlider" type="HSlider" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "
"
theme = ExtResource("1_o8mxa")
min_value = 0.001
max_value = 2.0
step = 0.0
value = 0.01

[node name="shadowLabel" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Die Qualität der VoxelGI"
mouse_filter = 1
theme = ExtResource("1_o8mxa")
theme_override_font_sizes/font_size = 32
text = "Schattenqualität
"

[node name="shadowSlider" type="HSlider" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "
"
theme = ExtResource("1_o8mxa")
min_value = 10.0
max_value = 14.0
value = 11.0
tick_count = 5
ticks_on_borders = true

[node name="GILabel" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Die Qualität der VoxelGI"
mouse_filter = 1
theme = ExtResource("1_o8mxa")
theme_override_font_sizes/font_size = 32
text = "GILABEL"

[node name="giQualitySlider" type="HSlider" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Qualität der Global Illumination"
theme = ExtResource("1_o8mxa")
max_value = 3.0
tick_count = 4
ticks_on_borders = true

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 25.455)
layout_mode = 2

[node name="backButton" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_o8mxa")
theme_override_font_sizes/font_size = 32
text = "Zurück"

[node name="PanelContainer" type="VSeparator" parent="PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(94.65, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="SubViewportContainer" type="SubViewportContainer" parent="PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(512, 512)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
stretch = true

[node name="SubViewport" type="SubViewport" parent="PanelContainer/HBoxContainer/SubViewportContainer"]
handle_input_locally = false
use_debanding = true
render_target_update_mode = 4

[node name="VoxelGI" type="VoxelGI" parent="PanelContainer/HBoxContainer/SubViewportContainer/SubViewport"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.648319, 1.97371, -0.857558)
layers = 1023
subdiv = 0
size = Vector3(7.04218, 3.99548, 6.5608)
data = ExtResource("3_t3o2y")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="PanelContainer/HBoxContainer/SubViewportContainer/SubViewport"]
transform = Transform3D(0.246576, 0.674486, -0.695894, 3.04222e-08, 0.718066, 0.695975, 0.969123, -0.171611, 0.177058, -26.3676, 4.5557, -9.96595)
light_color = Color(0.803922, 0.831373, 1, 1)
light_energy = 0.1
light_indirect_energy = 0.05
light_bake_mode = 1
shadow_enabled = true
directional_shadow_blend_splits = true
directional_shadow_max_distance = 50.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="PanelContainer/HBoxContainer/SubViewportContainer/SubViewport"]
environment = SubResource("Environment_jhhpj")

[node name="Camera3D" type="Camera3D" parent="PanelContainer/HBoxContainer/SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 0.991206, 0.132326, 0, -0.132326, 0.991206, 0.931786, 1.33291, 0.916981)
current = true

[node name="OmniLight3D" type="OmniLight3D" parent="PanelContainer/HBoxContainer/SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.67871, 1.25294, -1.70359)
light_color = Color(1, 0.894118, 0.819608, 1)
light_energy = 0.206
omni_range = 2.90154
omni_attenuation = 0.264543

[node name="FogVolume" type="FogVolume" parent="PanelContainer/HBoxContainer/SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.52757, -0.116959, -2.9716)
size = Vector3(16.8717, 1, 23.6292)
material = SubResource("FogMaterial_xsw50")

[node name="Tisch" parent="PanelContainer/HBoxContainer/SubViewportContainer/SubViewport" instance=ExtResource("3_47wyk")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.785272, 0, -1)

[node name="Tisch2" parent="PanelContainer/HBoxContainer/SubViewportContainer/SubViewport" instance=ExtResource("3_47wyk")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.16677, 0, -1)

[node name="FloorTile" parent="PanelContainer/HBoxContainer/SubViewportContainer/SubViewport" instance=ExtResource("3_l3m2c")]

[node name="FloorTile2" parent="PanelContainer/HBoxContainer/SubViewportContainer/SubViewport" instance=ExtResource("3_l3m2c")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 0)

[node name="FloorTile3" parent="PanelContainer/HBoxContainer/SubViewportContainer/SubViewport" instance=ExtResource("3_l3m2c")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2)

[node name="FloorTile4" parent="PanelContainer/HBoxContainer/SubViewportContainer/SubViewport" instance=ExtResource("3_l3m2c")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, -2)

[node name="StaticBody3D" parent="PanelContainer/HBoxContainer/SubViewportContainer/SubViewport" instance=ExtResource("4_ldhjw")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -1, 0, 1)

[node name="StaticBody3D2" parent="PanelContainer/HBoxContainer/SubViewportContainer/SubViewport" instance=ExtResource("4_ldhjw")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -1, 0, -1)

[node name="WandMitLeiste1_4" parent="PanelContainer/HBoxContainer/SubViewportContainer/SubViewport" instance=ExtResource("5_paph5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, -3)

[node name="WandMitLeiste1_5" parent="PanelContainer/HBoxContainer/SubViewportContainer/SubViewport" instance=ExtResource("5_paph5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -3)

[node name="WandMitLeiste1_6" parent="PanelContainer/HBoxContainer/SubViewportContainer/SubViewport" instance=ExtResource("5_paph5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, -3)

[node name="WandMitLeiste1_7" parent="PanelContainer/HBoxContainer/SubViewportContainer/SubViewport" instance=ExtResource("5_paph5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, -3)

[node name="WandMitLeiste1_8" parent="PanelContainer/HBoxContainer/SubViewportContainer/SubViewport" instance=ExtResource("5_paph5")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 3, 0, -3)

[node name="WandMitLeiste1_9" parent="PanelContainer/HBoxContainer/SubViewportContainer/SubViewport" instance=ExtResource("5_paph5")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 3, 0, -2)

[node name="WandMitLeiste1_10" parent="PanelContainer/HBoxContainer/SubViewportContainer/SubViewport" instance=ExtResource("5_paph5")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 3, 0, -1)

[node name="WandMitLeiste1_11" parent="PanelContainer/HBoxContainer/SubViewportContainer/SubViewport" instance=ExtResource("5_paph5")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 3, 0, 0)

[node name="Mülleimer" parent="PanelContainer/HBoxContainer/SubViewportContainer/SubViewport" instance=ExtResource("7_1nlli")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 1.42908, 0, -2.77324)

[node name="MeshInstance3D" type="MeshInstance3D" parent="PanelContainer/HBoxContainer/SubViewportContainer/SubViewport"]
transform = Transform3D(4.19558, 0, 0, 0, 1, 0, 0, 0, 5.85831, 1.11377, 3, -0.661009)
mesh = SubResource("BoxMesh_wxttw")

[node name="Uhr" parent="." instance=ExtResource("9_fd0cf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.29436, 1.70856, -2.8)

[node name="Buch" parent="." instance=ExtResource("10_ahesl")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.60516, 0.612413, -0.748238)

[node name="Bilderrahmen" parent="." instance=ExtResource("11_p1m7o")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 2.8, 1.28229, -0.743915)

[connection signal="value_changed" from="PanelContainer/HBoxContainer/VBoxContainer/scaleSlider" to="." method="_on_scale_slider_value_changed"]
[connection signal="toggled" from="PanelContainer/HBoxContainer/VBoxContainer/fpsToggleButton" to="." method="_on_fps_toggle_button_toggled"]
[connection signal="toggled" from="PanelContainer/HBoxContainer/VBoxContainer/fullScreenToggleButton" to="." method="_on_full_screen_toggle_button_toggled"]
[connection signal="toggled" from="PanelContainer/HBoxContainer/VBoxContainer/vsyncToggleButton" to="." method="_on_vsync_toggle_button_toggled"]
[connection signal="toggled" from="PanelContainer/HBoxContainer/VBoxContainer/ssaoToggleButton" to="." method="_on_ssao_toggle_button_toggled"]
[connection signal="toggled" from="PanelContainer/HBoxContainer/VBoxContainer/volFogToggleButton" to="." method="_on_vol_fog_toggle_button_toggled"]
[connection signal="toggled" from="PanelContainer/HBoxContainer/VBoxContainer/SSIL" to="." method="_on_ssil_toggled"]
[connection signal="toggled" from="PanelContainer/HBoxContainer/VBoxContainer/MSAAToggleButton" to="." method="_on_msaa_toggle_button_toggled"]
[connection signal="value_changed" from="PanelContainer/HBoxContainer/VBoxContainer/fpsSlider" to="." method="_on_fps_slider_value_changed"]
[connection signal="value_changed" from="PanelContainer/HBoxContainer/VBoxContainer/brightnessSlider" to="." method="_on_brightness_slider_value_changed"]
[connection signal="value_changed" from="PanelContainer/HBoxContainer/VBoxContainer/shadowSlider" to="." method="_on_shadow_slider_value_changed"]
[connection signal="value_changed" from="PanelContainer/HBoxContainer/VBoxContainer/giQualitySlider" to="." method="_on_gi_quality_slider_value_changed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/VBoxContainer/backButton" to="." method="_on_back_button_pressed"]
